# multiverse-cli

./: .gitignore  .multiverse.toml  CHEATSHEET.md  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  diari-cli-project-guide.md  regole_calendario.md
multiverse/: Cargo.toml
multiverse-core/: Cargo.toml
multiverse-core/src/: cli.rs  database.rs  main.rs  models.rs  templates.rs
multiverse-core/src/config/: cli.rs  handlers.rs  mod.rs  models.rs
multiverse-core/src/story/: cli.rs  database.rs  episode_handlers.rs  handlers.rs  mod.rs  models.rs  story_cli.rs  story_handlers.rs  story_models.rs
multiverse-core/src/world/: cli.rs  config.rs  database.rs  git.rs  handlers.rs  mod.rs  models.rs
multiverse-dashboard/: Cargo.toml
src/: cli.rs  database.rs  entity_macros.rs  lib.rs  main.rs  templates.rs
src/character/: cli.rs  database.rs  episode_relations.rs  handlers.rs  mod.rs  models.rs
src/episode/: cli.rs  handlers.rs  mod.rs  models.rs
src/event/: cli.rs  database.rs  handlers.rs  mod.rs  models.rs
src/faction/: cli.rs  database.rs  handlers.rs  mod.rs  models.rs
src/location/: cli.rs  database.rs  handlers.rs  mod.rs  models.rs
src/race/: cli.rs  database.rs  handlers.rs  mod.rs  models.rs
src/relations/: character_episode.rs  character_faction.rs  character_location.rs  character_race.rs  character_system.rs  cli.rs  database_macros.rs  episode_location.rs  event_character.rs  event_faction.rs  event_location.rs  handlers.rs  location_faction.rs  location_location.rs  location_system.rs  macros.rs  mod.rs  models.rs  race_system.rs  story_character.rs
src/story/: cli.rs  database.rs  episode_cli.rs  episode_handlers.rs  episode_models.rs  handlers.rs  mod.rs  models.rs  story_handlers.rs  story_models.rs
src/system/: cli.rs  database.rs  handlers.rs  mod.rs  models.rs
src/timeline/: cli.rs  config.rs  day_models.rs  handlers.rs  mod.rs  month_models.rs  timeline_date.rs  year_models.rs
tests/: character_tests.rs  event_tests.rs  faction_tests.rs  integration_character_faction_tests.rs  integration_character_location_tests.rs  integration_character_race_tests.rs  integration_character_system_tests.rs  integration_character_tests.rs  integration_episode_tests.rs  integration_event_character_tests.rs  integration_event_faction_tests.rs  integration_event_location_tests.rs  integration_event_tests.rs  integration_faction_tests.rs  integration_location_faction_tests.rs  integration_location_location_tests.rs  integration_location_system_tests.rs  integration_location_tests.rs  integration_query_tests.rs  integration_race_system_tests.rs  integration_race_tests.rs  integration_story_tests.rs  integration_system_tests.rs  location_tests.rs  query_tests.rs  race_tests.rs  story_tests.rs  system_tests.rs  world_tests.rs
tests/common/: mod.rs
