[workspace]
resolver = "2"
members = [
    "multiverse-core",
    "multiverse-dashboard", 
    "multiverse"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Filippo Mariani <filippo.ufficiale@gmail.com>"]
license = "MIT"
repository = "https://github.com/user/multiverse-cli"

[workspace.dependencies]
# Shared versions across workspace
tokio = { version = "1.47", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Web framework (dashboard only)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Templating
askama = "0.14"

# File operations
walkdir = "2.5"
regex = "1.11"

# Git integration  
git2 = "0.20"

# Config parsing
toml = "0.9"

# Terminal UI
console = "0.16"
indicatif = "0.18"
