[package]
name = "multiverse"
version = "0.1.0"
edition = "2021"
authors = ["Filippo Mariani <filippo.ufficiale@gmail.com>"]
license = "MIT"
repository = "https://github.com/user/multiverse-cli"
description = "Professional tooling for complex narrative universes"
keywords = ["cli", "narrative", "storytelling", "worldbuilding", "content"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "multiverse"
path = "src/main.rs"

[lib]
name = "multiverse"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["rt", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# File operations
walkdir = "2.5"
regex = "1.11"

# Git integration  
git2 = "0.20"

# Config parsing
toml = "0.9"

# Terminal UI
console = "0.16"
indicatif = "0.18"

# Additional dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
shellexpand = "3.1"
dirs = "6.0"