[package]
name = "multiverse-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for Multiverse CLI - narrative universe management"
keywords = ["cli", "narrative", "storytelling", "worldbuilding"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# Workspace shared dependencies
tokio = { workspace = true, features = ["rt", "macros", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }

# Core-specific dependencies
walkdir = { workspace = true }
regex = { workspace = true }
git2 = { workspace = true }
toml = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }

# Additional core dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
shellexpand = "3.1"
dirs = "6.0"
