[package]
name = "multiverse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Professional tooling for complex narrative universes"
keywords = ["cli", "narrative", "storytelling", "worldbuilding", "content"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "multiverse"
path = "src/main.rs"

[dependencies]
# Core dependency (always included)
multiverse-core = { path = "../multiverse-core" }

# Dashboard dependency (optional)
multiverse-dashboard = { path = "../multiverse-dashboard", optional = true }

# Workspace shared dependencies
tokio = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["dashboard"]
dashboard = ["dep:multiverse-dashboard"]
cli-only = []
